--- a/locale/en/sa-planets-pack.cfg
+++ b/locale/en/sa-planets-pack.cfg
@@ -7,5 +7,7 @@
 [technology-description]
 
 [mod-setting-name]
+spp-rubia-disable-tech-hiding=Disable rubia unknown techs
+spp-rubia-disable-efficiency-module-4=Disable rubia efficiency module 4
 
 [mod-setting-description]
