--- a/locale/en/sa-planets-pack.cfg
+++ b/locale/en/sa-planets-pack.cfg
@@ -9,5 +9,6 @@
 [mod-setting-name]
 spp-rubia-disable-tech-hiding=Disable rubia unknown techs
 spp-rubia-disable-efficiency-module-4=Disable rubia efficiency module 4
+spp-aai-loader-stacking=Enable loader stacking
 
 [mod-setting-description]
