--- a/locale/en/sa-planets-pack.cfg
+++ b/locale/en/sa-planets-pack.cfg
@@ -1,8 +1,16 @@
+[fluid-name]
+molten-gold=Molten gold
+
 [item-name]
 
 [item-description]
 
+[recipe-name]
+gold-ore-melting=Gold ore melting
+casting-gold=Casting gold
+
 [technology-name]
+gold-smelting=Gold smelting
 
 [technology-description]
 
